# UR_OnRobot_ROS2

./: README.md  required.repos
ur_onrobot_control/: CMakeLists.txt  package.xml
ur_onrobot_control/config/: base_env_controllers.yaml  left_scaled_controller.yaml  right_scaled_controller.yaml  ur_joint_state_broadcaster.yaml  ur_onrobot_controllers.yaml  ur_onrobot_with_environment_controllers.yaml
ur_onrobot_control/launch/: start_left_robot_with_environment.launch.py  start_real_robot.launch.py  start_right_robot_with_environment.launch_bk.py  start_robot.launch.py  start_robot.launch_bk.py  start_robot.launch_orig.py  start_robot_with_environment.launch.py  start_robot_with_right_environment.launch.py  start_simulation.launch.py  ur_control.launch.py  ur_onrobot_bringup.launch.py  ur_onrobot_smart_3rviz.launch.py  ur_onrobot_smart_3rviz.launch_bk.py  ur_onrobot_smart_bringup.launch.py
ur_onrobot_control/scripts/: joint_state_merger.py
ur_onrobot_control/urdf/: left_robot_with_environment.urdf.xacro  right_robot_with_environment.urdf.xacro  robot_with_environment.urdf.xacro  robot_with_right_environment.urdf.xacro
ur_onrobot_description/: CMakeLists.txt  required.repos
ur_onrobot_description/config/: initial_joint_positions.yaml
ur_onrobot_description/launch/: view_robot.launch.py
ur_onrobot_description/urdf/: ur_onrobot.urdf.xacro  ur_onrobot_macro.xacro
ur_onrobot_gazebo/: CMakeLists.txt  package.xml
ur_onrobot_gazebo/config/: gazebo_controllers.yaml  gazebo_materials.yaml  gazebo_plugins.yaml  gazebo_transmissions.yaml  hardware_interfaces.yaml  physics_config.yaml  sensor_config.yaml
ur_onrobot_gazebo/description/urdf/: common.gazebo.xacro  left_robot_gazebo.urdf.xacro  left_robot_with_environment.gazebo.xacro  right_robot_gazebo.urdf.xacro
ur_onrobot_gazebo/launch/: gazebo_basic.launch.py  gazebo_left.launch.py  gazebo_right.launch.py  gazebo_selector.launch.py
ur_onrobot_gazebo/scripts/: calibration_check.py  gazebo_utils.py  move_to_position.py  pick_place_demo.py  quick_spawn.py  spawn_object.py
ur_onrobot_gazebo/worlds/: basic.world  empty.world  industrial.world  ur_workspace.world
ur_onrobot_moveit_config/: CMakeLists.txt  package.xml  setup.py
ur_onrobot_moveit_config/config/: controllers.yaml  gripper_controllers.yaml  joint_limits.yaml  joint_limits_grippers.yaml  kinematics.yaml  moveit_controllers.yaml  ompl_planning.yaml  pilz_industrial_motion_planner.yaml  planning_pipelines.yaml  ros2_controllers.yaml  sensors_3d.yaml  servo.yaml  ur_onrobot_servo.yaml
ur_onrobot_moveit_config/launch/: demo.launch.py  move_group.launch.py  planning_context.launch.py  servo.launch.py  ur_onrobot_moveit.launch.py
ur_onrobot_moveit_config/srdf/: ur_onrobot.srdf.xacro  ur_onrobot_2fg7.srdf.xacro  ur_onrobot_3fg15.srdf.xacro  ur_onrobot_macro.srdf.xacro  ur_onrobot_rg.srdf.xacro
ur_onrobot_moveit_config/ur_onrobot_moveit_config/: launch_common.py
ur_workspace_description/: CMakeLists.txt  package.xml
ur_workspace_description/config/: environment_controllers.yaml
ur_workspace_description/launch/: view_env_only.launch.py  view_environment_only.launch.py  view_left_robot_env_only.launch.py  view_platform.launch.py  view_right_environment_only.launch.py  view_right_robot_env_only.launch.py
ur_workspace_description/meshes/environment/: conveyor.stl  narrow_safety_barrier.stl  table.stl  top_safety_barrier.stl  wide_safety_barrier.stl
ur_workspace_description/meshes/materials/: materials.xacro
ur_workspace_description/rviz/: view_platform.rviz
ur_workspace_description/urdf/: Only_environment_for_left_robot.urdf.xacro  Only_environment_for_right_robot.urdf.xacro  environment.urdf.xacro  environment_right.urdf.xacro  left_robot_environment.urdf.xacro  platform.urdf.xacro  right_environment.urdf.xacro  right_robot_environment.urdf.xacro
