<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ur_onrobot_gazebo</name>
  <version>0.1.0</version>
  <description>Gazebo simulation for UR robots with OnRobot grippers and environments</description>
  <maintainer email="gabriel.novas@aimen.es">Gabriel Novas</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>gazebo_ros_pkgs</depend>
  <depend>gazebo_ros</depend>
  <depend>ur_onrobot_description</depend>
  <depend>ur_workspace_description</depend>
  <depend>ur_onrobot_control</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher</depend>
  <depend>ros2_control</depend>
  <depend>ros2_controllers</depend>
  
  <!-- Dependencias para scripts -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>gazebo_msgs</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros plugin_path="${prefix}/lib"/>
  </export>
</package>